# game-codes

./: .dockerignore  .gitignore  Dockerfile  README.md  data.json  debug_ba.py  debug_dexerto.py  debug_endfield.py  debug_endfield2.py  debug_nte.py  debug_pt.py  debug_pt2.py  docker-compose.yml  pyproject.toml  railway.json  render.yaml  requirements.txt  run.py  run_local.ps1  seed.json  vercel.json
.github/workflows/: scrape.yml
api/: app.py  config.py  constants.py  db.py  discord_bot.py  models.py  utils.py
api/codes/: known_codes.json  parsers.py  sources.py  task.py
api/core/: base.py  registry.py  scraper.py
api/games/: bluearchive.py  endfield.py
api/static/: api-docs.html  app.js  index.html  style.css
game_codes.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
