[project]
name = "game-codes"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",

    "httpx>=0.28",
    "beautifulsoup4>=4.13",
    "lxml>=5.3",
    "apscheduler>=3.11",
    "pydantic-settings>=2.7",
    "loguru>=0.7",
]

[tool.setuptools.packages.find]
include = ["api*"]

[tool.vercel]
entrypoint = "api.app:app"
